feat: install Chromium and required libraries for Puppeteer

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,18 @@
 FROM node:22-alpine
 
+# 1. Install Chromium and required libraries
+RUN apk add --no-cache \
+      chromium \
+      nss \
+      freetype \
+      harfbuzz \
+      ca-certificates \
+      ttf-freefont
+
+# 2. Tell Puppeteer to skip downloading Chrome and use the installed one
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+
 WORKDIR /aqi-dashboard-india-backend
 
 COPY package*.json ./
